poke/testsuite/poke.pkl/cast-str-diag-1.pk
/* { dg-do compile } */

defvar x = "foo" as uint<13>; /* { dg-error "not allowed" } */
